--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
                   <a
                     href="#"
                     class="font-medium text-gray-500 hover:text-gray-900"
-                    >About</a
+                    >Abouts</a
                   >
                   <a
                     href="#"
